auto-test/tests/chapter_10/valid/extra_credit/label_static_var_same_name.c


int main(void) {
    static int x = 5;
    goto x;
    x = 0;
x:
    return x; 
}