auto-test/tests/chapter_10/invalid_parse/extra_credit/static_label.c


int main(void) {
    static a:
    return 1;
}